# netmap

./: README.md  build.sh  requirements.txt  run.py
.github/workflows/: test.yml
backend/: CMakeLists.txt
backend/include/: commands.hpp  network_scan.hpp  network_scanner.hpp  network_server.hpp  network_state.h  network_state.hpp  node.h  ping.hpp  plugin.hpp
backend/include/utilities/: dig_x.hpp  dns_lookup.hpp  nmap.hpp  nmap_x.hpp  ping_x.hpp  traceroute.hpp  traceroute_x.hpp
backend/src/: dns_lookup.cpp  main.cpp  network_scan.cpp  network_scanner.cpp  network_server.cpp  network_state.cpp  node.cpp  ping.cpp  utils.cpp  utils.hpp
backend/src/utilities/: dig_x.cpp  nmap.cpp  nmap_x.cpp  nping.cpp  ping_x.cpp  traceroute.cpp  traceroute_x.cpp
backend/utilities/include/: dig_x.hpp  nmap_x.hpp  ping_x.hpp  traceroute_x.hpp
backend/utilities/src/: dig_x.cpp  nmap_x.cpp  ping_x.cpp  traceroute_x.cpp
core/: logger.py  run.py
frontend/: cli.py  gui.py  ipc.py  network_interface.py
frontend/go_server/: back_client.go  go.mod  go.sum  grpc_client.go  main.go  socket_client.go
frontend/go_server/proto/: netmap.pb.go  netmap_grpc.pb.go
frontend/gui/: grpc_client.py  gui.py  main.py  ui_manager.py
frontend/gui/proto/: netmap.proto  netmap_pb2.py  netmap_pb2_grpc.py
frontend/netmap_cli/: CMakeLists.txt  cli.cpp  cli.hpp  main.cpp
frontend/proto/: netmap.proto
src/: cli.py  config.py  gui.py  main.py
tests/: test_pass.py
